# youbot-xsens-controller

./: .gitignore  Doxyfile  README.md  manual  stack.xml
arm_visualizer/: CMakeLists.txt  mainpage.dox  manifest.xml
arm_visualizer/model/: arm.xml  box.xml  forearm.xml  hand.xml
arm_visualizer/src/: arm_visualizer.cpp  gazebo_model.cpp  gazebo_model_list.cpp  gazebo_node.cpp
dfv/: CMakeLists.txt  mainpage.dox  manifest.xml
dfv/examples/: example.cpp
dfv/src/: example.cpp  matrix.cpp  quaternion.cpp  utils.cpp  vector3.cpp  xsens_listener.cpp  youbot.cpp
doc/img/: gazebo_delete.xcf  gazebo_pause.xcf
doc/latex/: pfc.aux  pfc.idx  pfc.lof  pfc.log.u1conflict  pfc.lot  pfc.out  pfc.tex  pfc.tex.bak  pfc.toc
doc/presentación/: presentación.aux  presentación.nav  presentación.out  presentación.snm  presentación.tex  presentación.tex.bak  presentación.toc  resumen.aux  resumen.tex
doc/source_code/: source.aux  (+4 more)
xsens_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
xsens_driver/config/: config.txt
xsens_driver/include/xsens_driver/: cmt1.h  cmt2.h  cmt3.h  cmtdef.h  cmtmessage.h  cmtpacket.h  cmtscan.h  utils.h  xsens_driver.h  xsens_file.h  xsens_list.h  xsens_sensor.h  xsens_sensor_subscriber.h  xsens_time.h
xsens_driver/src/: cmt1.cpp  cmt2.cpp  cmt3.cpp  cmtmessage.cpp  cmtpacket.cpp  cmtscan.cpp  example_linux.cpp  utils.cpp  xsens_driver.cpp  xsens_exception.cpp  xsens_node.cpp  xsens_sensor.cpp  xsens_sensor_subscriber.cpp  xsens_std.cpp  xsens_time.cpp
xsens_driver_raw/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot_controller_2/: CMakeLists.txt  manifest.xml
youbot_sentinel/: CMakeLists.txt  mainpage.dox  manifest.xml
(+692 files in other folders)
